added users postgres crud and api. ishould add note postgres crud and api and test bot of theme
